# attend

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  LICENSE.md  README.md  attend.cabal  justanotherdotcom.cabal  package.yaml  stack.yaml
executable/: Main.hs
src/: Lib.hs
test/: Spec.hs
test-suite/: Main.hs
