name:                justanotherdotcom
version:             0.1.0.0
synopsis:            Code for the website https://www.justanotherdot.com
homepage:            https://github.com/justanotherdot/justanotherdotcom#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan James Spencer
maintainer:          spencer.ryanjames@gmail.com
copyright:           2017 (c) Ryan James Spencer
category:            Misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , wai
                     , wai-app-static
                     , warp
                     , warp-tls
                     , http-types
                     , persistent
                     , esqueleto
  default-language:    Haskell2010

executable justanotherdotcom-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , justanotherdotcom
  default-language:    Haskell2010

test-suite justanotherdotcom-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , justanotherdotcom
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justanotherdot/justanotherdotcom
